--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,13 @@
 @import 'tailwindcss';
 
+@theme {
+    --color-bg-page: #23252C;
+    --color-bg-card: #1A1B21;
+    --color-bg-footer: #161619;
+    --color-button-blue: #5093E2;
+    /* Textcolors */
+    --color-subheading: #F3BF99;
+    --color-paragraph-heading: #F5F5F5;
+    --color-paragraph-text: #DCDCDC;
+
+}
